fix section__title on IE

--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -11,7 +11,7 @@ $brk--large-desktop: 1920px;
 .section {
 	&__title {
 		display: inline-block;
-		margin: 0 auto;
+		margin: 0;
 
 		&__wrapper {
 			display: flex;
